--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         }
       })();
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>0xzkc0de - Cybersecurity Portfolio</title>
-    <meta name="description" content="Binary exploitation, OS internals and web hacking writeups" />
+    <title>0xzkc0de - Software Development & Security Portfolio</title>
+    <meta name="description" content="Software Development, Competitive Programming, Cryptography, and Malware Analysis" />
     <meta name="author" content="0xzkc0de" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="0xzkc0de - Cybersecurity Portfolio" />
-    <meta property="og:description" content="Binary exploitation, OS internals and web hacking writeups" />
+    <meta property="og:title" content="0xzkc0de - Software Development & Security Portfolio" />
+    <meta property="og:description" content="Software Development, Competitive Programming, Cryptography, and Malware Analysis" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
